package ar.edu.unlp.info.oo2.ej17_DatabaseAccess;

import java.util.Collection;
import java.util.List;

public class DatabaseRealAccess implements DatabaseAccess {
	private DatabaseAccess database;
	@Override
	public int insertNewRow(List<String> rowData) {
		// TODO Auto-generated method stub
		return 0;
	}

	@Override
	public Collection<String>getSearchResults(List<String> queryString) {
		// TODO Auto-generated method stub
		return null;
	}
	
}
