@startuml
class DatabaseRealAccess <<realSubject>> [[java:ar.edu.unlp.info.oo2.accesobd.DatabaseRealAccess]] {
	-data: Map<String,List<String>>
	-currentId: int
	+DatabaseRealAccess()
	+getSearchResults(queryString: String): Collection<String>
	+insertNewRow(rowData: List<String>): int
}
interface DatabaseAccess {
}
DatabaseAccess <|.. DatabaseRealAccess
class DatabaseAccessProxy <<proxy>>[[java:ar.edu.unlp.info.oo2.accesobd.DatabaseAccessProxy]] {
	-loggedIn: boolean
	-psswd: String
	+DatabaseAccessProxy(database2: DatabaseAccess, psswd: String)
	+getSearchResults(queryString: String): Collection<String>
	+insertNewRow(rowData: List<String>): int
	+login(psswd: String): void
	+logOut(): void
}
class DatabaseAccess {
}
DatabaseAccessProxy --> "1" DatabaseAccess : database
interface DatabaseAccess {
}
DatabaseAccess <|.. DatabaseAccessProxy
interface DatabaseAccess <<subject>>[[java:ar.edu.unlp.info.oo2.accesobd.DatabaseAccess]] {
	getSearchResults(queryString: String): Collection<String>
	insertNewRow(rowData: List<String>): int
}
@enduml